--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "@emotion/styled": "^11.6.0",
     "@hookform/resolvers": "^2.8.5",
     "apexcharts": "^3.32.1",
+    "axios": "^0.25.0",
     "framer-motion": "^5.5.5",
+    "miragejs": "^0.1.43",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.23.0",
     "react-icons": "^4.3.1",
+    "react-query": "^3.34.8",
     "yup": "^0.32.11"
   },
   "devDependencies": {
